--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -27,3 +27,34 @@
 
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
 <% end %>
+
+
+<form>
+  <div class="form-row">
+      <%= form_for(@order) do |f| %>
+    <% if @order.errors.any? %>
+    <div id="error_explanation">
+      <div class="alert alert-danger">
+        The form contains <%= pluralize(@order.errors.count, "error") %>.
+      </div>
+      <ul>
+      <% @order.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+    <% end %>
+      <div class="form-group col-md-6">
+        <label for="inputPassword4">Password</label>
+        <input type="password" class="form-control" id="inputPassword4">
+      </div>
+
+  </div>
+    <div class="form-group">
+      <%= f.label :delivery_address %>
+    <%= f.text_area :delivery_address, rows: 3, cols: 25, class: 'form-control' %>
+    </div>
+  <% end %>
+
+  <button type="submit" class="btn btn-primary">Sign in</button>
+</form>
